unpackaged/main/default/objects/WebtoLeadMatrix__mdt/WebtoLeadMatrix__mdt.object-meta.xml
<CustomObject>
    <label>WebtoLeadMatrix</label>
    <pluralLabel>WebtoLeadMatrixes</pluralLabel>
</CustomObject>