unpackaged/main/default/objects/WebtoLeadMatrix__mdt/fields/Lead_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_User__c</fullName>
    <label>Lead Owner User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>