unpackaged/main/default/objects/WebtoLeadMatrix__mdt/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <label>Lead Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>