unpackaged/main/default/objects/WebtoLeadMatrix__mdt/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <label>Request Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>